# nflapidb

./: .gitignore  Pipfile  README.md  setup.cfg
data/: historic_roster.json
src/nflapidb/: Client.py  DataManagerFacade.py  Entity.py  EntityManager.py  GameDriveManagerFacade.py  GamePlayManagerFacade.py  GameScoreManagerFacade.py  GameSummaryManagerFacade.py  PlayerGamelogManagerFacade.py  PlayerProfileManagerFacade.py  PlayerSchedDepManagerFacade.py  QueryModel.py  RosterManagerFacade.py  ScheduleDependantManagerFacade.py  ScheduleManagerFacade.py  SeasonTypeSequence.py  TeamManagerFacade.py  Utilities.py
tests/: TestEntity.py  TestEntityManager.py  TestGameDriveManagerFacade.py  TestGamePlayManagerFacade.py  TestGameScoreManagerFacade.py  TestGameSummaryManagerFacade.py  TestPlayerGamelogManagerFacade.py  TestPlayerProfileManagerFacade.py  TestQueryModel.py  TestRosterManagerFacade.py  TestScheduleManagerFacade.py  TestSync.py  TestTeamManagerFacade.py  TestUtilities.py
tests/data/: game_drive_2019_reg_13.json  game_drive_2019_reg_14.json  game_play_2019_reg_13.json  game_play_2019_reg_14.json  game_play_ambig_plabb.json  game_play_miss_plabb.json  game_score_2019_reg_13.json  game_score_2019_reg_14.json  game_summary_2019_reg_13.json  game_summary_2019_reg_14.json  player_gamelog_kc.json  player_gamelog_pit.json  player_profile_kc.json  player_profile_pit.json  roster_ari.json  roster_hou.json  roster_kc.json  roster_la.json  roster_ne.json  roster_pit.json  roster_sea.json  schedule_2017.json  schedule_2018.json  schedule_2019.json
(+12 files in other folders)
