[metadata]
name = nflapidb
version = 0.1a1
description = provides persistence of nflapi data
author = Clifford Wollam
author-email = clifford@ca3tech.com
license = gpl3
url = https://github.com/ca3tech/nflapidb/
project-urls =
    Documentation = https://github.com/ca3tech/nflapidb
classifiers =
    Development Status :: 2 - Pre-Alpha
    Programming Language :: Python :: 3

[options]
zip_safe = False
packages = find:
include_package_data = True
package_dir =
    =src
python_requires = >=3.4

[options.package_data]
nflapidb = "data/"
